--- a/sberhunters-2/index.html
+++ b/sberhunters-2/index.html
@@ -72,7 +72,7 @@
         <div class="container">
             <div class="row">
                 <div class="element intro">
-                    <h3 class="element__title intro__title">Рекомендуй знакомых специалистов на открытые вакансии Сбербанка и получай вознаграждение при их трудоустройстве.</h3>
+                    <h3 class="element__title intro__title">Рекомендуй знакомых специалистов на вакансии Сбербанка и получай вознаграждение при их трудоустройстве.</h3>
                 </div>
             </div>
         </div>
@@ -621,7 +621,6 @@
     </div>
 
     <div class="preloader">
-        <span class="sreen-reader-text">Страница загружается</span>
         <div class="spinner">
             <div class="bounce1"></div>
             <div class="bounce2"></div>
