--- a/sberhunters-2/index.html
+++ b/sberhunters-2/index.html
@@ -159,7 +159,7 @@
                         </li>
                     </ul>
 
-                    <p class="cards__note">*gross, после того, как кандидат прошел испытательный срок и проработал в Компании 3 месяца</p>
+                    <p class="cards__note">*gross, после того, как реферал отработал 3 месяца</p>
 
                 </div>
             </div>
@@ -206,13 +206,13 @@
                                 </div>
 
                                 <div class="column column--right">
-                                    <span>Ты получаешь</span> <span>вознаграждение до 40 000</span> <span>за успешную рекомендацию*</span>
+                                    <span>Ты получаешь</span> <span>вознаграждение до 40 000</span> <span>за успешную рекомендацию**</span>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                    <p class="how__note">*gross, после того, как кандидат прошел испытательный срок и проработал в Компании 3 месяца</p>
+                    <p class="how__note">**зависит от грейда вакансии и места работы (ЦА/ТБ)</p>
 
                 </div>
             </div>
@@ -386,7 +386,7 @@
                                     <span class="icon"></span>
                                 </div>
                                 <div class="tips__content">
-                                    При выборе вакансий для рекомендации <strong>рассматривай только предложения с изображением человечков</strong>. На остальные вакансии рекомендовать внешнего кандидата возможности нет, так как на них рассматриваются только сотрудники Банка.
+                                    При выборе вакансий для рекомендации <strong>рассматривай только предложения с изображением человечков</strong>. На остальные вакансии рассматриваются только сотрудники Банка.
                                 </div>
                             </div>
                         </li>
