--- a/sberhunters-2/index.html
+++ b/sberhunters-2/index.html
@@ -226,8 +226,9 @@
             </div>
 
             <div class="row">
-                <video class="video" controls>
+                <video class="video" poster="assets/video/poster.jpg" controls>
                     <source src="assets/video/video.mp4" type="video/mp4">
+                    <source src="assets/video/video.webm" type="video/webm">
                     <p>Your browser doesn't support HTML5 video. Here is a <a href="assets/video/video.mp4">link to the video</a> instead.</p>
                 </video>
             </div>
