--- a/sberhunters-3/index.html
+++ b/sberhunters-3/index.html
@@ -85,12 +85,12 @@
                         </video>
                     </div>
 
-                    <div class="element video__tagline">
-                        <h3>
+                    <div class="element title title--tagline">
+                        <h3 class="title__headline">
+                            <span class="title__svg">
+                                <span class="title__svg__image"></span>
+                            </span>
                             <span class="screen-reader-text">Знаешь профессионала? Рекомендуй!</span>
-
-                            <span class="nl">Знаешь профессионала?</span>
-                            <span class="nl">Рекомендуй!</span>
                         </h3>
                     </div>
 
