--- a/sberhunters-3/index.html
+++ b/sberhunters-3/index.html
@@ -6,9 +6,9 @@
 
 <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 
-<link rel="stylesheet" href="assets/css/reset.css?v=1543573576" />
-<link rel="stylesheet" href="assets/css/fonts.css?v=1543573576" />
-<link rel="stylesheet" href="assets/css/styles.css?v=1543573576" />
+<link rel="stylesheet" href="assets/css/reset.css" />
+<link rel="stylesheet" href="assets/css/fonts.css" />
+<link rel="stylesheet" href="assets/css/styles.css" />
 
 <script src="assets/js/jquery-3.3.1.min.js"></script>
 
