--- a/sberhunters-3/index.html
+++ b/sberhunters-3/index.html
@@ -6,9 +6,9 @@
 
 <script>(function(html){html.className = html.className.replace(/\bno-js\b/,'js')})(document.documentElement);</script>
 
-<link rel="stylesheet" href="assets/css/reset.css" />
-<link rel="stylesheet" href="assets/css/fonts.css" />
-<link rel="stylesheet" href="assets/css/styles.css" />
+<link rel="stylesheet" href="assets/css/reset.css?v=1543573576" />
+<link rel="stylesheet" href="assets/css/fonts.css?v=1543573576" />
+<link rel="stylesheet" href="assets/css/styles.css?v=1543573576" />
 
 <script src="assets/js/jquery-3.3.1.min.js"></script>
 
@@ -42,15 +42,7 @@
                         </div>
 
                         <div class="row">
-                            <div class="element header__matrix">
-                                <div class="header__matrix__wrapper">
-                                    <div class="aligner__helper">
-                                        <div class="aligner">
-                                            <h3><span class="nl">Сеть</span> <span>профессионалов</span></h3>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                            <div class="element header__matrix"></div>
                         </div>
 
                         <div class="row">
@@ -66,6 +58,73 @@
         </header>
 
         <main class="main">
+            <section class="section kandidat">
+                <div class="container">
+                    <div class="element title">
+                        <h3 class="title__headline">
+                            <span class="title__svg">
+                                <span class="title__svg__image"></span>
+                            </span>
+                            <span class="screen-reader-text">Это просто! Пара кликов и твой знакомы – уже кандидат на вакансию.</span>
+                        </h3>
+                    </div>
+
+                    <div class="kandidat__content">
+                        <ul>
+                            <li>
+                                <div class="item">
+                                    <div class="aligner__helper">
+                                        <div class="aligner">
+                                            Ты рекомендуешь знакомого профессионала на подходящую вакансию в системе  Success Factors
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="item">
+                                    <div class="aligner__helper">
+                                        <div class="aligner">
+                                            Кандидат проходит отбор на вакансию
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="item">
+                                    <div class="aligner__helper">
+                                        <div class="aligner">
+                                            В случае успешного прохождения отбора специалист попадает в нашу Команду
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="item">
+                                    <div class="aligner__helper">
+                                        <div class="aligner">
+                                            Ты получаешь вознаграждение за успешную рекомендацию* <span class="nl note">* ознакомиться с подробными правилами действия программы и размером вознаграждения можно по ссылке</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="item">
+                                    <div class="aligner__helper">
+                                        <div class="aligner">
+                                            Твой знакомый может сделать тоже самое, став частью нашей Команды
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+
             <section class="section video">
                 <div class="container">
                     <div class="element title">
