--- a/sberhunters-3/index.html
+++ b/sberhunters-3/index.html
@@ -58,6 +58,17 @@
         </header>
 
         <main class="main">
+            <section class="section chel">
+                <div class="chel__before"></div>
+
+                <div class="container">
+                    <div class="chel__content">
+                        <p class="top"><span class="nl"><span class="arrow arrow--left"></span>Привет, я Алексей! Как-то раз друг</span> <span class="nl">рассказал мне о новой вакансии</span> <span class="nl">Сбербанка: я откликнулся и</span> <span class="nl">прошел отбор, работаю уже</span> <span class="nl">больше года!</span></p>
+                        <p class="bottom"><span class="nl">Хорошо, что Сбербанк дает</span> <span class="nl">возможность формировать</span> <span class="nl">команду!<span class="arrow arrow--right"></span></span></p>
+                    </div>
+                </div>
+            </section>
+
             <section class="section kandidat">
                 <div class="container">
                     <div class="element title">
