--- a/sberhunters-3/index.html
+++ b/sberhunters-3/index.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
 
-                        <div class="row">
+                        <div class="row row--matrix">
                             <div class="element header__matrix"></div>
                         </div>
 
@@ -58,6 +58,8 @@
         </header>
 
         <main class="main">
+            <div class="side"></div>
+
             <section class="section chel">
                 <div class="chel__before"></div>
 
@@ -148,7 +150,7 @@
                     </div>
 
                     <div class="element video__content">
-                        <video class="video" controls>
+                        <video class="video" controls poster="assets/video/poster.jpg">
                             <source src="assets/video/video.mp4" type="video/mp4">
                             <source src="assets/video/video.webm" type="video/webm">
                             <p>Your browser doesn't support HTML5 video. Here is a <a href="assets/video/video.mp4">link to the video</a> instead.</p>
