--- a/sberhunters-3/index.html
+++ b/sberhunters-3/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
     </noscript>
-    
+
     <div class="page">
         <header class="header">
             <div class="header__wrapper">
@@ -187,7 +187,7 @@
                     </div>
 
                     <div class="element button">
-                        <a href="#"><span>Рекомендовать кандидата</span></a>
+                        <a href="https://hcm18.sapsf.com/sf/careers/jobsearch?bplte_company=paosberbanP2" target="_blank"><span>Рекомендовать кандидата</span></a>
                     </div>
                 </div>
             </section>
@@ -389,7 +389,7 @@
                                     <div class="tip__content">
                                         <div class="aligner__helper">
                                             <div class="aligner">
-                                                <p>Чтобы следить за появлением новых вакансий, оформи подписку с заданными критериями в SF по ссылке</p>
+                                                <p>Чтобы следить за появлением новых вакансий, оформи подписку с заданными критериями в SF по <a href="https://hcm18.sapsf.com/sf/careers/jobalerts?bplte_company=paosberbanP2" target="_blank">ссылке</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -406,7 +406,7 @@
                                     <div class="tip__content">
                                         <div class="aligner__helper">
                                             <div class="aligner">
-                                                <p>Для оперативного получения информации  по реферальной программе  ты можешь обратиться за советом к нашему чат-боту</p>
+                                                <p>Для оперативного получения информации  по реферальной программе  ты можешь обратиться за советом к нашему <a href="https://supportsfchat-j237750ea.dispatcher.ru1.hana.ondemand.com/index.html" target="_blank">чат-боту</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -459,7 +459,7 @@
                     </div>
 
                     <div class="element button">
-                        <a href="#"><span>Рекомендовать кандидата в базу</span></a>
+                        <a href="https://hcm18.sapsf.com/xi/ui/rcmreferral/pages/EmployeeReferrals.xhtml?bplte_company=paosberbanP2" target="_blank"><span>Рекомендовать кандидата в базу</span></a>
                     </div>
                 </div>
             </section>
