--- a/sberhunters-3/index.html
+++ b/sberhunters-3/index.html
@@ -138,7 +138,7 @@
                                 <div class="item">
                                     <div class="aligner__helper">
                                         <div class="aligner">
-                                            Ты получаешь вознаграждение за успешную рекомендацию* <span class="nl note">* ознакомиться с подробными правилами действия программы и размером вознаграждения можно по ссылке</span>
+                                            Ты получаешь вознаграждение за успешную рекомендацию* <span class="nl note">* ознакомиться с подробными правилами действия программы и размером вознаграждения можно по <a href="https://jam18.sapjam.com/groups/mBG5LgqHtkw9ksgpFqTT4T/documents/acmgCt0SkeDlbE4UEC2rNF/slide_viewer" target="_blank">ссылке</a></span>
                                         </div>
                                     </div>
                                 </div>
